# wireframing-component-bonanza-excalidraw

./: .gitignore  CLAUDE.md  DUAL_REPO_WORKFLOW.md  Makefile  README.md  SUBMISSION_CHECKLIST.md  THEMES.md  VISIBILITY_IMPROVEMENTS.md  close_pr.sh  generate_preview_images.py  pr_close_message.txt  pyproject.toml  test_component_theme.py  test_full_generation.py  test_roundness.py
scripts/: create_showcase_files.py  submit_to_excalidraw.sh  validate_libraries.py
src/: __init__.py
src/excalidraw_gen/: __init__.py  __main__.py  cli.py
src/excalidraw_gen/builder/: __init__.py  builder.py  generate.py
src/excalidraw_gen/components/: __init__.py  level0_frames.py  level1_primitives.py  level2_base_ui.py  level3_modules.py  level3_organisms.py  level3_shells.py  level4_saas.py  level4_templates.py  level5_ai.py
src/excalidraw_gen/core/: __init__.py
src/excalidraw_gen/core/themes/: __init__.py  abc123_dark.py  bronzer.py  (+3 more)
src/excalidraw_gen/testing/: __init__.py  inspector.py  validator.py
tests/: test_themes.py
wireframing-solution/: .env.example  ARCHITECTURE.md  README.md  SYSTEM_DIAGRAM.md  langgraph.json
wireframing-solution/backend/: pyproject.toml
wireframing-solution/backend/scripts/: generate_component_registry.py
wireframing-solution/backend/src/agent/: app.py  graph.py
wireframing-solution/backend/src/data/: component-catalog.txt  component-registry.json
wireframing-solution/backend/src/tools/: composer.py
wireframing-solution/frontend/: index.html  package.json  vite.config.ts
wireframing-solution/frontend/src/: App.css  App.tsx
(+2 files in other folders)
